--- a/windows-pe-sandbox.vcxproj.filters
+++ b/windows-pe-sandbox.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="Resource Files\hde">
+      <UniqueIdentifier>{e10c3a7b-1400-4dee-bc6c-488b14c232b5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="emulator.cpp">
@@ -31,23 +34,23 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="hde\hde32.c">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files\hde</Filter>
     </ClCompile>
     <ClCompile Include="hde\hde64.c">
+      <Filter>Resource Files\hde</Filter>
+    </ClCompile>
+    <ClCompile Include="monitored.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="emulated_images.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="emulator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="environment.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="monitored_detours.h">
+    <ClInclude Include="monitored.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pe.h">
@@ -60,19 +63,19 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hde\hde32.h">
-      <Filter>Header Files</Filter>
+      <Filter>Resource Files\hde</Filter>
     </ClInclude>
     <ClInclude Include="hde\hde64.h">
-      <Filter>Header Files</Filter>
+      <Filter>Resource Files\hde</Filter>
     </ClInclude>
     <ClInclude Include="hde\pstdint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Resource Files\hde</Filter>
     </ClInclude>
     <ClInclude Include="hde\table32.h">
-      <Filter>Header Files</Filter>
+      <Filter>Resource Files\hde</Filter>
     </ClInclude>
     <ClInclude Include="hde\table64.h">
-      <Filter>Header Files</Filter>
+      <Filter>Resource Files\hde</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
